# Trace2Tower_new

./: .dockerignore  .gitattributes  .gitignore  README.md  pyproject.toml
clean_artifacts/: README.md  inventory.json
clean_configs/: README.md
clean_docs/: API_STATE_ROBUSTNESS_CN.md  CROSS_BENCHMARK_RESULTS.md  CROSS_MODEL_PAIRED_ANALYSIS.md  EXPERIMENT_DIARY.md  EXPERIMENT_RESULTS_OUTLINE_CN.md  FIGURES.md  README.md  REPORT.md  REVIEW_SUPPLEMENT.md  SKILLX_INFERENCE_CONTRACT_AUDIT.md  WEBSHOP_RESULT_BOUNDARY_CN.md
docker/: alfworld-runtime.Dockerfile
docs/: README.md  decisions.md  evaluation.md  execution-matrix.md  flash-pool-expansion.md  flat-skill-summary.md  graph-and-spectral.md  pareto-refinement.md  retrieval.md  skill-tower.md  skillx-baseline.md  webshop-complete-experiment-report.md  webshop-final-random300-report.md  webshop-freeze-manifest.json  webshop-mid-only-ablation.md  webshop-validation-and-final-test-protocol.md
experiment_wirte/: Analysis.md  Experimental Settings.md  Limitations.md  Main Results.md
experiments/: 1.md  SKILL_INJECTION_CROSS_DOMAIN_AUDIT.md  TASK_CONDITIONING_INTERFACE.md  TRACE2TOWER_SKILLX_CLEAN_RESULTS.md
public_release/: .gitignore  README.md  pyproject.toml
public_release/skill_library/: README.md
public_release/skill_library/alfworld/: tower-v17.json
public_release/src/trace2tower/: cli.py
public_release/src/trace2tower/adapters/: transitions.py
public_release/src/trace2tower/adapters/alfworld/: actions.py  events.py  plan_rewrite.py
public_release/src/trace2tower/adapters/webshop/: __init__.py  actions.py  branch_graph.py  events.py  policy_discovery.py
public_release/src/trace2tower/agent/: evaluator.py
public_release/src/trace2tower/artifacts/: tower.py
public_release/src/trace2tower/config/: tower.py
public_release/src/trace2tower/core/: results.py  trajectory.py
public_release/src/trace2tower/graph/: graph.py  spectral.py
public_release/src/trace2tower/inference/: formatting.py  plan_rewrite.py
public_release/src/trace2tower/preprocessing/: segmentation.py  transition_encoder.py  transitions.py
public_release/src/trace2tower/rendering/: renderer.py
public_release/src/trace2tower/retrieval/: index.py
public_release/src/trace2tower/skills/: high_communities.py  high_paths.py  induction.py
scripts/: __init__.py  evaluate_results.py
services/: alfworld_server.py
skill_library/: README.md
tests/: test_agent_skills.py  test_alfworld_deployment_manifests.py  test_alfworld_environment.py  test_alfworld_task_prototypes.py  test_audit_webshop_training_pools.py  test_checkpoint.py  test_deployment_optimization.py  test_evaluation.py  test_extend_no_skill_pool.py  test_flat_skill_summary.py  test_global_e2e.py  test_manifests.py  test_materialize_multirepeat_pool.py  test_merge_alfworld_pool.py  test_method_contracts.py  test_pareto_refinement.py  test_reproducibility.py  test_run_matrix.py  test_runner.py  test_skillx_adapter.py  test_skillx_retrieval.py  test_source_architecture.py  test_stop_guard_diagnostic_snapshot.py  test_trace2tower_full_refinement.py  test_trace2tower_graph.py  test_trace2tower_graph_retrieval.py  test_trace2tower_high_communities.py  test_trace2tower_labeled_mid_provider.py  (+13 more)
(+690 files in other folders)
