[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "trace2tower"
version = "0.1.0"
description = "Reproducible Trace2Tower experiment framework"
requires-python = ">=3.11,<3.14"
dependencies = [
    "openai>=2.32,<3",
    "pyarrow>=19,<20",
    "python-dotenv>=1.0,<2",
    "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.9",
]

[project.scripts]
trace2tower-lock-sources = "trace2tower.reproducibility:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
