[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "trace2tower"
version = "0.1.0"
description = "Reproducible Trace2Tower experiment framework"
requires-python = ">=3.11,<3.14"
dependencies = [
    "click>=8.1,<9",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "httpx>=0.28,<1",
    "langchain-openai>=0.3,<2",
    "numpy>=1.26,<3",
    "openai>=2.32,<3",
    "pyarrow>=19,<20",
    "python-dotenv>=1.0,<2",
    "requests>=2.32,<3",
    "PyYAML>=6,<7",
    "rich>=13,<15",
    "scikit-learn>=1.9,<2",
    "scipy>=1.13,<2",
    "spacy>=3.8,<3.9",
    "thefuzz>=0.22,<1",
    "tqdm>=4.67,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.9",
]

[project.scripts]
trace2tower-lock-sources = "trace2tower.reproducibility:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
