[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "trace2tower"
version = "0.1.0"
description = "Trace2Tower Tower algorithm and LLM agent runtime"
requires-python = ">=3.11,<3.14"
dependencies = [
    "httpx>=0.28,<1",
    "numpy>=1.26,<3",
    "openai>=2.32,<3",
    "pyarrow>=19,<20",
    "PyYAML>=6,<7",
    "scikit-learn>=1.9,<2",
    "scipy>=1.13,<2",
]

[project.scripts]
trace2tower = "trace2tower.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
